k8s-manifests/argocd-infra/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # --- 12 LPA LOGIC: AWS ALB CONTROLLER ---
    # This triggers the creation of a real AWS Application Load Balancer
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    # Security: Redirect HTTP to HTTPS (Crucial for Banking)
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    
    # Health Check for the Grafana UI
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    
    # Optimization: Stickiness ensures a user stays on the same Grafana pod
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600
spec:
  rules:
    - host: grafana.rohandevops.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # This must match the service name created by your Helm chart
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
